feature/add scss to webpack and fix bugs

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="./dist/bundle.css">
     <title>News</title>
 </head>
 <body>
 
-<script src="../dist/bundle.js"></script>
+<script src="./dist/bundle.js"></script>
 </body>
 </html>
